# zkp-course-lecture3-code

arkworks/: Cargo.toml
arkworks/src/: alloc.rs  cmp.rs  main.rs
circom/: Makefile  README.md  sudoku.circom  sudoku.input.json
noir/: .gitignore  Prover.toml  Verifier.toml
noir/src/: main.nr
zokrates/: abi.json  out  out.r1cs  out.wtns  proof.json  proving.key  root.zok  run.sh  verification.key  witness
